# HW-EX1

./: CMakeLists.txt  equilateral.cpp  ex.cpp  ex.h  figure.cpp  figure.h  isosceles.cpp  main.cpp  parallelogram.cpp  quadrangle.cpp  rectangle.cpp  right.cpp  right.h  romb.cpp  square.cpp  triangle.cpp
