cmake_minimum_required(VERSION 3.0.0)
project(HW-MF3-MAIN VERSION 0.1.0)
add_executable(HW-MF3-MAIN main.cpp equilateral.cpp equilateral.h ex.cpp ex.h figure.cpp figure.h isosceles.cpp isosceles.h parallelogram.cpp parallelogram.h 
quadrangle.cpp quadrangle.h rectangle.cpp rectangle.h right.cpp right.h romb.cpp romb.h square.cpp square.h triangle.cpp triangle.h) 
